--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Suntijra.github.io/LinguaFlow-AI",
   "scripts": {
     "dev": "tsx server.ts",
     "build": "tsc -b && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "start": "node server.ts",
     "lint": "tsc --noEmit",
     "preview": "vite preview"
@@ -39,6 +42,7 @@
     "@types/node": "^22.14.0",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4.1.14",
     "tsx": "^4.21.0",
     "typescript": "~5.8.2",
